# try_dependent_industrial_ci

./: .travis.rosinstall  .travis.yml  README.md
bar/: CMakeLists.txt  package.xml
bar/include/bar/: bar.h
bar/src/: bar_node.cpp  collatz_node.cpp
